--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>3.7.2</version>
+        </dependency>
 
     </dependencies>
 
@@ -66,6 +71,7 @@
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<!-- выводить ли при ошибке содержимое в консоль -->
+                    <consoleOutput>true</consoleOutput>
 					<logViolationsToConsole>true</logViolationsToConsole>
 					<!-- проверять ли тестовый код проекта -->
 					<includeTestSourceDirectory>true</includeTestSourceDirectory>
