--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 logging.level.org.zalando.logbook= TRACE
 logging.level.org.slf4j= WARN
+
+spring.sql.init.mode=always
+# ? jdbc-url ???????, ??? ?????? ????? ????????? ? ????
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
