--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.zalando.logbook= TRACE
+#logging.level.org.zalando.logbook= TRACE
 logging.level.org.slf4j= WARN
 
 spring.sql.init.mode=always
